[package]
name = "gogs2gitlab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "3.0.0"
home = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
reqwest = { version = "0.11", features = ["json", "blocking"] }
